Fixed bug not readable text in Input component.

--- a/src/App.css
+++ b/src/App.css
@@ -38,4 +38,5 @@
 	padding: 8px 6px;
 	margin: 1px;
 	box-shadow: none;
+	color: white;
 }
